frontend/FlexBison/autogenerated/MiniCBison.output
Grammar

    0 $accept: CompileUnit $end

    1 CompileUnit: FuncDef
    2            | CompileUnit FuncDef
    3            | Statement
    4            | CompileUnit Statement
    5            | FuncDeclare
    6            | CompileUnit FuncDeclare

    7 FuncDef: "int" DIGIT_ID "(" ")" Block
    8        | "int" DIGIT_ID "(" FuncFormalParams ")" Block
    9        | "void" DIGIT_ID "(" ")" Block
   10        | "void" DIGIT_ID "(" FuncFormalParams ")" Block
   11        | "float" DIGIT_ID "(" ")" Block
   12        | "float" DIGIT_ID "(" FuncFormalParams ")" Block

   13 FuncDeclare: "int" DIGIT_ID "(" ")" ";"
   14            | "int" DIGIT_ID "(" FuncFormalParams ")" ";"
   15            | "void" DIGIT_ID "(" ")" ";"
   16            | "void" DIGIT_ID "(" FuncFormalParams ")" ";"
   17            | "float" DIGIT_ID "(" ")" ";"
   18            | "float" DIGIT_ID "(" FuncFormalParams ")" ";"

   19 FuncFormalParams: FuncFormalParam
   20                 | FuncFormalParams "," FuncFormalParam

   21 FuncFormalParam: "int" DIGIT_ID
   22                | "float" DIGIT_ID
   23                | "int" DIGIT_ID "[" "]"
   24                | "int" DIGIT_ID ArrayIndexs
   25                | "int" DIGIT_ID "[" "]" ArrayIndexs

   26 Block: "{" "}"
   27      | "{" BlockItemList "}"

   28 BlockItemList: Statement
   29              | BlockItemList Statement

   30 Statement: "return" Expr ";"
   31          | "return" ";"
   32          | Block
   33          | IfStmt
   34          | WhileStmt
   35          | DowhileStmt
   36          | "break" ";"
   37          | "continue" ";"
   38          | AssignStmt
   39          | DeclStmt
   40          | Expr ";"
   41          | ";"

   42 AssignStmt: Lval "=" Expr ";"

   43 DeclStmt: ConstDecl
   44         | VarlDecl

   45 VarlDecl: "int" VarDefList ";"
   46         | "float" VarDefList ";"

   47 VarDefList: VarDef
   48           | VarDefList "," VarDef

   49 VarDef: DIGIT_ID
   50       | DIGIT_ID "=" VarInitVal
   51       | DIGIT_ID ArrayIndexs
   52       | DIGIT_ID ArrayIndexs "=" VarInitVal

   53 VarInitVal: Expr
   54           | "{" "}"
   55           | "{" VarInitValList "}"

   56 VarInitValList: VarInitVal
   57               | VarInitValList "," VarInitVal

   58 ConstDecl: "const" "int" ConstDefList ";"
   59          | "const" "float" ConstDefList ";"

   60 ConstDefList: ConstDef
   61             | ConstDefList "," ConstDef

   62 ConstDef: DIGIT_ID "=" ConstInitVal
   63         | DIGIT_ID ArrayIndexs "=" ConstInitVal

   64 ConstInitVal: ConstExp
   65             | "{" "}"
   66             | "{" ConstInitvalList "}"

   67 ConstInitvalList: ConstInitVal
   68                 | ConstInitvalList "," ConstInitVal

   69 IfStmt: "if" "(" Condition ")" Statement
   70       | "if" "(" Condition ")" Statement "else" Statement

   71 WhileStmt: "while" "(" Condition ")" Statement

   72 DowhileStmt: "do" Statement "while" "(" Condition ")" ";"

   73 ArrayIndexs: "[" Expr "]"
   74            | ArrayIndexs "[" Expr "]"

   75 Expr: AddExpr

   76 ConstExp: AddExpr

   77 AddExpr: MulExpr
   78        | AddExpr "+" MulExpr
   79        | AddExpr "-" MulExpr

   80 MulExpr: UnaryExpr
   81        | MulExpr "*" UnaryExpr
   82        | MulExpr "/" UnaryExpr
   83        | MulExpr "%" UnaryExpr

   84 Condition: OrCond

   85 OrCond: AndCond
   86       | OrCond "||" AndCond

   87 AndCond: EquCondTerm
   88        | AndCond "&&" EquCondTerm

   89 EquCondTerm: LessCondTerm
   90            | EquCondTerm "==" LessCondTerm
   91            | EquCondTerm "!=" LessCondTerm

   92 LessCondTerm: Expr
   93             | LessCondTerm "<" Expr
   94             | LessCondTerm "<=" Expr
   95             | LessCondTerm ">" Expr
   96             | LessCondTerm ">=" Expr

   97 UnaryExpr: PrimaryExp
   98          | "+" UnaryExpr
   99          | "-" UnaryExpr
  100          | "!" UnaryExpr

  101 PrimaryExp: Lval
  102           | "(" OrCond ")"
  103           | DIGIT_INT
  104           | DIGIT_FLOAT
  105           | DIGIT_ID "(" FuncRealParams ")"
  106           | DIGIT_ID "(" ")"

  107 Lval: DIGIT_ID
  108     | DIGIT_ID ArrayIndexs

  109 FuncRealParams: Expr
  110               | FuncRealParams "," Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DIGIT_INT <literal> (258) 103
    DIGIT_ID <literal> (259) 7 8 9 10 11 12 13 14 15 16 17 18 21 22 23 24 25 49 50 51 52 62 63 105 106 107 108
    DIGIT_FLOAT <literal> (260) 104
    "+" (261) 78 98
    "-" (262) 79 99
    "/" (263) 82
    "*" (264) 81
    "=" (265) 42 50 52 62 63
    "%" (266) 83
    "int" (267) 7 8 13 14 21 23 24 25 45 58
    "float" (268) 11 12 17 18 22 46 59
    "void" (269) 9 10 15 16
    "if" (270) 69 70
    "else" (271) 70
    "return" (272) 30 31
    "while" (273) 71 72
    "do" (274) 72
    "const" (275) 58 59
    "break" <literal> (276) 36
    "continue" <literal> (277) 37
    "==" (278) 90
    "!=" (279) 91
    "<" (280) 93
    ">" (281) 95
    "<=" (282) 94
    ">=" (283) 96
    "!" (284) 100
    "&&" (285) 88
    "||" (286) 86
    "{" (287) 26 27 54 55 65 66
    "}" (288) 26 27 54 55 65 66
    "(" (289) 7 8 9 10 11 12 13 14 15 16 17 18 69 70 71 72 102 105 106
    ")" (290) 7 8 9 10 11 12 13 14 15 16 17 18 69 70 71 72 102 105 106
    "[" (291) 23 25 73 74
    "]" (292) 23 25 73 74
    "," (293) 20 48 57 61 68 110
    ";" (294) 13 14 15 16 17 18 30 31 36 37 40 41 42 45 46 58 59 72
    THEN (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    CompileUnit <node> (42)
        on left: 1 2 3 4 5 6
        on right: 0 2 4 6
    FuncDef <node> (43)
        on left: 7 8 9 10 11 12
        on right: 1 2
    FuncDeclare <node> (44)
        on left: 13 14 15 16 17 18
        on right: 5 6
    FuncFormalParams <node> (45)
        on left: 19 20
        on right: 8 10 12 14 16 18 20
    FuncFormalParam <node> (46)
        on left: 21 22 23 24 25
        on right: 19 20
    Block <node> (47)
        on left: 26 27
        on right: 7 8 9 10 11 12 32
    BlockItemList <node> (48)
        on left: 28 29
        on right: 27 29
    Statement <node> (49)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 3 4 28 29 69 70 71 72
    AssignStmt <node> (50)
        on left: 42
        on right: 38
    DeclStmt <node> (51)
        on left: 43 44
        on right: 39
    VarlDecl <node> (52)
        on left: 45 46
        on right: 44
    VarDefList <node> (53)
        on left: 47 48
        on right: 45 46 48
    VarDef <node> (54)
        on left: 49 50 51 52
        on right: 47 48
    VarInitVal <node> (55)
        on left: 53 54 55
        on right: 50 52 56 57
    VarInitValList <node> (56)
        on left: 56 57
        on right: 55 57
    ConstDecl <node> (57)
        on left: 58 59
        on right: 43
    ConstDefList <node> (58)
        on left: 60 61
        on right: 58 59 61
    ConstDef <node> (59)
        on left: 62 63
        on right: 60 61
    ConstInitVal <node> (60)
        on left: 64 65 66
        on right: 62 63 67 68
    ConstInitvalList <node> (61)
        on left: 67 68
        on right: 66 68
    IfStmt <node> (62)
        on left: 69 70
        on right: 33
    WhileStmt <node> (63)
        on left: 71
        on right: 34
    DowhileStmt <node> (64)
        on left: 72
        on right: 35
    ArrayIndexs <node> (65)
        on left: 73 74
        on right: 24 25 51 52 63 74 108
    Expr <node> (66)
        on left: 75
        on right: 30 40 42 53 73 74 92 93 94 95 96 109 110
    ConstExp <node> (67)
        on left: 76
        on right: 64
    AddExpr <node> (68)
        on left: 77 78 79
        on right: 75 76 78 79
    MulExpr <node> (69)
        on left: 80 81 82 83
        on right: 77 78 79 81 82 83
    Condition <node> (70)
        on left: 84
        on right: 69 70 71 72
    OrCond <node> (71)
        on left: 85 86
        on right: 84 86 102
    AndCond <node> (72)
        on left: 87 88
        on right: 85 86 88
    EquCondTerm <node> (73)
        on left: 89 90 91
        on right: 87 88 90 91
    LessCondTerm <node> (74)
        on left: 92 93 94 95 96
        on right: 89 90 91 93 94 95 96
    UnaryExpr <node> (75)
        on left: 97 98 99 100
        on right: 80 81 82 83 98 99 100
    PrimaryExp <node> (76)
        on left: 101 102 103 104 105 106
        on right: 97
    Lval <node> (77)
        on left: 107 108
        on right: 42 101
    FuncRealParams <node> (78)
        on left: 109 110
        on right: 105 110


State 0

    0 $accept: • CompileUnit $end

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "int"        shift, and go to state 6
    "float"      shift, and go to state 7
    "void"       shift, and go to state 8
    "if"         shift, and go to state 9
    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "do"         shift, and go to state 12
    "const"      shift, and go to state 13
    "break"      shift, and go to state 14
    "continue"   shift, and go to state 15
    "!"          shift, and go to state 16
    "{"          shift, and go to state 17
    "("          shift, and go to state 18
    ";"          shift, and go to state 19

    CompileUnit  go to state 20
    FuncDef      go to state 21
    FuncDeclare  go to state 22
    Block        go to state 23
    Statement    go to state 24
    AssignStmt   go to state 25
    DeclStmt     go to state 26
    VarlDecl     go to state 27
    ConstDecl    go to state 28
    IfStmt       go to state 29
    WhileStmt    go to state 30
    DowhileStmt  go to state 31
    Expr         go to state 32
    AddExpr      go to state 33
    MulExpr      go to state 34
    UnaryExpr    go to state 35
    PrimaryExp   go to state 36
    Lval         go to state 37


State 1

  103 PrimaryExp: DIGIT_INT •

    $default  reduce using rule 103 (PrimaryExp)


State 2

  105 PrimaryExp: DIGIT_ID • "(" FuncRealParams ")"
  106           | DIGIT_ID • "(" ")"
  107 Lval: DIGIT_ID •
  108     | DIGIT_ID • ArrayIndexs

    "("  shift, and go to state 38
    "["  shift, and go to state 39

    $default  reduce using rule 107 (Lval)

    ArrayIndexs  go to state 40


State 3

  104 PrimaryExp: DIGIT_FLOAT •

    $default  reduce using rule 104 (PrimaryExp)


State 4

   98 UnaryExpr: "+" • UnaryExpr

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    UnaryExpr   go to state 41
    PrimaryExp  go to state 36
    Lval        go to state 42


State 5

   99 UnaryExpr: "-" • UnaryExpr

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    UnaryExpr   go to state 43
    PrimaryExp  go to state 36
    Lval        go to state 42


State 6

    7 FuncDef: "int" • DIGIT_ID "(" ")" Block
    8        | "int" • DIGIT_ID "(" FuncFormalParams ")" Block
   13 FuncDeclare: "int" • DIGIT_ID "(" ")" ";"
   14            | "int" • DIGIT_ID "(" FuncFormalParams ")" ";"
   45 VarlDecl: "int" • VarDefList ";"

    DIGIT_ID  shift, and go to state 44

    VarDefList  go to state 45
    VarDef      go to state 46


State 7

   11 FuncDef: "float" • DIGIT_ID "(" ")" Block
   12        | "float" • DIGIT_ID "(" FuncFormalParams ")" Block
   17 FuncDeclare: "float" • DIGIT_ID "(" ")" ";"
   18            | "float" • DIGIT_ID "(" FuncFormalParams ")" ";"
   46 VarlDecl: "float" • VarDefList ";"

    DIGIT_ID  shift, and go to state 47

    VarDefList  go to state 48
    VarDef      go to state 46


State 8

    9 FuncDef: "void" • DIGIT_ID "(" ")" Block
   10        | "void" • DIGIT_ID "(" FuncFormalParams ")" Block
   15 FuncDeclare: "void" • DIGIT_ID "(" ")" ";"
   16            | "void" • DIGIT_ID "(" FuncFormalParams ")" ";"

    DIGIT_ID  shift, and go to state 49


State 9

   69 IfStmt: "if" • "(" Condition ")" Statement
   70       | "if" • "(" Condition ")" Statement "else" Statement

    "("  shift, and go to state 50


State 10

   30 Statement: "return" • Expr ";"
   31          | "return" • ";"

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18
    ";"          shift, and go to state 51

    Expr        go to state 52
    AddExpr     go to state 33
    MulExpr     go to state 34
    UnaryExpr   go to state 35
    PrimaryExp  go to state 36
    Lval        go to state 42


State 11

   71 WhileStmt: "while" • "(" Condition ")" Statement

    "("  shift, and go to state 53


State 12

   72 DowhileStmt: "do" • Statement "while" "(" Condition ")" ";"

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "int"        shift, and go to state 54
    "float"      shift, and go to state 55
    "if"         shift, and go to state 9
    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "do"         shift, and go to state 12
    "const"      shift, and go to state 13
    "break"      shift, and go to state 14
    "continue"   shift, and go to state 15
    "!"          shift, and go to state 16
    "{"          shift, and go to state 17
    "("          shift, and go to state 18
    ";"          shift, and go to state 19

    Block        go to state 23
    Statement    go to state 56
    AssignStmt   go to state 25
    DeclStmt     go to state 26
    VarlDecl     go to state 27
    ConstDecl    go to state 28
    IfStmt       go to state 29
    WhileStmt    go to state 30
    DowhileStmt  go to state 31
    Expr         go to state 32
    AddExpr      go to state 33
    MulExpr      go to state 34
    UnaryExpr    go to state 35
    PrimaryExp   go to state 36
    Lval         go to state 37


State 13

   58 ConstDecl: "const" • "int" ConstDefList ";"
   59          | "const" • "float" ConstDefList ";"

    "int"    shift, and go to state 57
    "float"  shift, and go to state 58


State 14

   36 Statement: "break" • ";"

    ";"  shift, and go to state 59


State 15

   37 Statement: "continue" • ";"

    ";"  shift, and go to state 60


State 16

  100 UnaryExpr: "!" • UnaryExpr

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    UnaryExpr   go to state 61
    PrimaryExp  go to state 36
    Lval        go to state 42


State 17

   26 Block: "{" • "}"
   27      | "{" • BlockItemList "}"

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "int"        shift, and go to state 54
    "float"      shift, and go to state 55
    "if"         shift, and go to state 9
    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "do"         shift, and go to state 12
    "const"      shift, and go to state 13
    "break"      shift, and go to state 14
    "continue"   shift, and go to state 15
    "!"          shift, and go to state 16
    "{"          shift, and go to state 17
    "}"          shift, and go to state 62
    "("          shift, and go to state 18
    ";"          shift, and go to state 19

    Block          go to state 23
    BlockItemList  go to state 63
    Statement      go to state 64
    AssignStmt     go to state 25
    DeclStmt       go to state 26
    VarlDecl       go to state 27
    ConstDecl      go to state 28
    IfStmt         go to state 29
    WhileStmt      go to state 30
    DowhileStmt    go to state 31
    Expr           go to state 32
    AddExpr        go to state 33
    MulExpr        go to state 34
    UnaryExpr      go to state 35
    PrimaryExp     go to state 36
    Lval           go to state 37


State 18

  102 PrimaryExp: "(" • OrCond ")"

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    Expr          go to state 65
    AddExpr       go to state 33
    MulExpr       go to state 34
    OrCond        go to state 66
    AndCond       go to state 67
    EquCondTerm   go to state 68
    LessCondTerm  go to state 69
    UnaryExpr     go to state 35
    PrimaryExp    go to state 36
    Lval          go to state 42


State 19

   41 Statement: ";" •

    $default  reduce using rule 41 (Statement)


State 20

    0 $accept: CompileUnit • $end
    2 CompileUnit: CompileUnit • FuncDef
    4            | CompileUnit • Statement
    6            | CompileUnit • FuncDeclare

    $end         shift, and go to state 70
    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "int"        shift, and go to state 6
    "float"      shift, and go to state 7
    "void"       shift, and go to state 8
    "if"         shift, and go to state 9
    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "do"         shift, and go to state 12
    "const"      shift, and go to state 13
    "break"      shift, and go to state 14
    "continue"   shift, and go to state 15
    "!"          shift, and go to state 16
    "{"          shift, and go to state 17
    "("          shift, and go to state 18
    ";"          shift, and go to state 19

    FuncDef      go to state 71
    FuncDeclare  go to state 72
    Block        go to state 23
    Statement    go to state 73
    AssignStmt   go to state 25
    DeclStmt     go to state 26
    VarlDecl     go to state 27
    ConstDecl    go to state 28
    IfStmt       go to state 29
    WhileStmt    go to state 30
    DowhileStmt  go to state 31
    Expr         go to state 32
    AddExpr      go to state 33
    MulExpr      go to state 34
    UnaryExpr    go to state 35
    PrimaryExp   go to state 36
    Lval         go to state 37


State 21

    1 CompileUnit: FuncDef •

    $default  reduce using rule 1 (CompileUnit)


State 22

    5 CompileUnit: FuncDeclare •

    $default  reduce using rule 5 (CompileUnit)


State 23

   32 Statement: Block •

    $default  reduce using rule 32 (Statement)


State 24

    3 CompileUnit: Statement •

    $default  reduce using rule 3 (CompileUnit)


State 25

   38 Statement: AssignStmt •

    $default  reduce using rule 38 (Statement)


State 26

   39 Statement: DeclStmt •

    $default  reduce using rule 39 (Statement)


State 27

   44 DeclStmt: VarlDecl •

    $default  reduce using rule 44 (DeclStmt)


State 28

   43 DeclStmt: ConstDecl •

    $default  reduce using rule 43 (DeclStmt)


State 29

   33 Statement: IfStmt •

    $default  reduce using rule 33 (Statement)


State 30

   34 Statement: WhileStmt •

    $default  reduce using rule 34 (Statement)


State 31

   35 Statement: DowhileStmt •

    $default  reduce using rule 35 (Statement)


State 32

   40 Statement: Expr • ";"

    ";"  shift, and go to state 74


State 33

   75 Expr: AddExpr •
   78 AddExpr: AddExpr • "+" MulExpr
   79        | AddExpr • "-" MulExpr

    "+"  shift, and go to state 75
    "-"  shift, and go to state 76

    $default  reduce using rule 75 (Expr)


State 34

   77 AddExpr: MulExpr •
   81 MulExpr: MulExpr • "*" UnaryExpr
   82        | MulExpr • "/" UnaryExpr
   83        | MulExpr • "%" UnaryExpr

    "/"  shift, and go to state 77
    "*"  shift, and go to state 78
    "%"  shift, and go to state 79

    $default  reduce using rule 77 (AddExpr)


State 35

   80 MulExpr: UnaryExpr •

    $default  reduce using rule 80 (MulExpr)


State 36

   97 UnaryExpr: PrimaryExp •

    $default  reduce using rule 97 (UnaryExpr)


State 37

   42 AssignStmt: Lval • "=" Expr ";"
  101 PrimaryExp: Lval •

    "="  shift, and go to state 80

    $default  reduce using rule 101 (PrimaryExp)


State 38

  105 PrimaryExp: DIGIT_ID "(" • FuncRealParams ")"
  106           | DIGIT_ID "(" • ")"

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18
    ")"          shift, and go to state 81

    Expr            go to state 82
    AddExpr         go to state 33
    MulExpr         go to state 34
    UnaryExpr       go to state 35
    PrimaryExp      go to state 36
    Lval            go to state 42
    FuncRealParams  go to state 83


State 39

   73 ArrayIndexs: "[" • Expr "]"

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    Expr        go to state 84
    AddExpr     go to state 33
    MulExpr     go to state 34
    UnaryExpr   go to state 35
    PrimaryExp  go to state 36
    Lval        go to state 42


State 40

   74 ArrayIndexs: ArrayIndexs • "[" Expr "]"
  108 Lval: DIGIT_ID ArrayIndexs •

    "["  shift, and go to state 85

    $default  reduce using rule 108 (Lval)


State 41

   98 UnaryExpr: "+" UnaryExpr •

    $default  reduce using rule 98 (UnaryExpr)


State 42

  101 PrimaryExp: Lval •

    $default  reduce using rule 101 (PrimaryExp)


State 43

   99 UnaryExpr: "-" UnaryExpr •

    $default  reduce using rule 99 (UnaryExpr)


State 44

    7 FuncDef: "int" DIGIT_ID • "(" ")" Block
    8        | "int" DIGIT_ID • "(" FuncFormalParams ")" Block
   13 FuncDeclare: "int" DIGIT_ID • "(" ")" ";"
   14            | "int" DIGIT_ID • "(" FuncFormalParams ")" ";"
   49 VarDef: DIGIT_ID •
   50       | DIGIT_ID • "=" VarInitVal
   51       | DIGIT_ID • ArrayIndexs
   52       | DIGIT_ID • ArrayIndexs "=" VarInitVal

    "="  shift, and go to state 86
    "("  shift, and go to state 87
    "["  shift, and go to state 39

    $default  reduce using rule 49 (VarDef)

    ArrayIndexs  go to state 88


State 45

   45 VarlDecl: "int" VarDefList • ";"
   48 VarDefList: VarDefList • "," VarDef

    ","  shift, and go to state 89
    ";"  shift, and go to state 90


State 46

   47 VarDefList: VarDef •

    $default  reduce using rule 47 (VarDefList)


State 47

   11 FuncDef: "float" DIGIT_ID • "(" ")" Block
   12        | "float" DIGIT_ID • "(" FuncFormalParams ")" Block
   17 FuncDeclare: "float" DIGIT_ID • "(" ")" ";"
   18            | "float" DIGIT_ID • "(" FuncFormalParams ")" ";"
   49 VarDef: DIGIT_ID •
   50       | DIGIT_ID • "=" VarInitVal
   51       | DIGIT_ID • ArrayIndexs
   52       | DIGIT_ID • ArrayIndexs "=" VarInitVal

    "="  shift, and go to state 86
    "("  shift, and go to state 91
    "["  shift, and go to state 39

    $default  reduce using rule 49 (VarDef)

    ArrayIndexs  go to state 88


State 48

   46 VarlDecl: "float" VarDefList • ";"
   48 VarDefList: VarDefList • "," VarDef

    ","  shift, and go to state 89
    ";"  shift, and go to state 92


State 49

    9 FuncDef: "void" DIGIT_ID • "(" ")" Block
   10        | "void" DIGIT_ID • "(" FuncFormalParams ")" Block
   15 FuncDeclare: "void" DIGIT_ID • "(" ")" ";"
   16            | "void" DIGIT_ID • "(" FuncFormalParams ")" ";"

    "("  shift, and go to state 93


State 50

   69 IfStmt: "if" "(" • Condition ")" Statement
   70       | "if" "(" • Condition ")" Statement "else" Statement

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    Expr          go to state 65
    AddExpr       go to state 33
    MulExpr       go to state 34
    Condition     go to state 94
    OrCond        go to state 95
    AndCond       go to state 67
    EquCondTerm   go to state 68
    LessCondTerm  go to state 69
    UnaryExpr     go to state 35
    PrimaryExp    go to state 36
    Lval          go to state 42


State 51

   31 Statement: "return" ";" •

    $default  reduce using rule 31 (Statement)


State 52

   30 Statement: "return" Expr • ";"

    ";"  shift, and go to state 96


State 53

   71 WhileStmt: "while" "(" • Condition ")" Statement

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    Expr          go to state 65
    AddExpr       go to state 33
    MulExpr       go to state 34
    Condition     go to state 97
    OrCond        go to state 95
    AndCond       go to state 67
    EquCondTerm   go to state 68
    LessCondTerm  go to state 69
    UnaryExpr     go to state 35
    PrimaryExp    go to state 36
    Lval          go to state 42


State 54

   45 VarlDecl: "int" • VarDefList ";"

    DIGIT_ID  shift, and go to state 98

    VarDefList  go to state 45
    VarDef      go to state 46


State 55

   46 VarlDecl: "float" • VarDefList ";"

    DIGIT_ID  shift, and go to state 98

    VarDefList  go to state 48
    VarDef      go to state 46


State 56

   72 DowhileStmt: "do" Statement • "while" "(" Condition ")" ";"

    "while"  shift, and go to state 99


State 57

   58 ConstDecl: "const" "int" • ConstDefList ";"

    DIGIT_ID  shift, and go to state 100

    ConstDefList  go to state 101
    ConstDef      go to state 102


State 58

   59 ConstDecl: "const" "float" • ConstDefList ";"

    DIGIT_ID  shift, and go to state 100

    ConstDefList  go to state 103
    ConstDef      go to state 102


State 59

   36 Statement: "break" ";" •

    $default  reduce using rule 36 (Statement)


State 60

   37 Statement: "continue" ";" •

    $default  reduce using rule 37 (Statement)


State 61

  100 UnaryExpr: "!" UnaryExpr •

    $default  reduce using rule 100 (UnaryExpr)


State 62

   26 Block: "{" "}" •

    $default  reduce using rule 26 (Block)


State 63

   27 Block: "{" BlockItemList • "}"
   29 BlockItemList: BlockItemList • Statement

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "int"        shift, and go to state 54
    "float"      shift, and go to state 55
    "if"         shift, and go to state 9
    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "do"         shift, and go to state 12
    "const"      shift, and go to state 13
    "break"      shift, and go to state 14
    "continue"   shift, and go to state 15
    "!"          shift, and go to state 16
    "{"          shift, and go to state 17
    "}"          shift, and go to state 104
    "("          shift, and go to state 18
    ";"          shift, and go to state 19

    Block        go to state 23
    Statement    go to state 105
    AssignStmt   go to state 25
    DeclStmt     go to state 26
    VarlDecl     go to state 27
    ConstDecl    go to state 28
    IfStmt       go to state 29
    WhileStmt    go to state 30
    DowhileStmt  go to state 31
    Expr         go to state 32
    AddExpr      go to state 33
    MulExpr      go to state 34
    UnaryExpr    go to state 35
    PrimaryExp   go to state 36
    Lval         go to state 37


State 64

   28 BlockItemList: Statement •

    $default  reduce using rule 28 (BlockItemList)


State 65

   92 LessCondTerm: Expr •

    $default  reduce using rule 92 (LessCondTerm)


State 66

   86 OrCond: OrCond • "||" AndCond
  102 PrimaryExp: "(" OrCond • ")"

    "||"  shift, and go to state 106
    ")"   shift, and go to state 107


State 67

   85 OrCond: AndCond •
   88 AndCond: AndCond • "&&" EquCondTerm

    "&&"  shift, and go to state 108

    $default  reduce using rule 85 (OrCond)


State 68

   87 AndCond: EquCondTerm •
   90 EquCondTerm: EquCondTerm • "==" LessCondTerm
   91            | EquCondTerm • "!=" LessCondTerm

    "=="  shift, and go to state 109
    "!="  shift, and go to state 110

    $default  reduce using rule 87 (AndCond)


State 69

   89 EquCondTerm: LessCondTerm •
   93 LessCondTerm: LessCondTerm • "<" Expr
   94             | LessCondTerm • "<=" Expr
   95             | LessCondTerm • ">" Expr
   96             | LessCondTerm • ">=" Expr

    "<"   shift, and go to state 111
    ">"   shift, and go to state 112
    "<="  shift, and go to state 113
    ">="  shift, and go to state 114

    $default  reduce using rule 89 (EquCondTerm)


State 70

    0 $accept: CompileUnit $end •

    $default  accept


State 71

    2 CompileUnit: CompileUnit FuncDef •

    $default  reduce using rule 2 (CompileUnit)


State 72

    6 CompileUnit: CompileUnit FuncDeclare •

    $default  reduce using rule 6 (CompileUnit)


State 73

    4 CompileUnit: CompileUnit Statement •

    $default  reduce using rule 4 (CompileUnit)


State 74

   40 Statement: Expr ";" •

    $default  reduce using rule 40 (Statement)


State 75

   78 AddExpr: AddExpr "+" • MulExpr

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    MulExpr     go to state 115
    UnaryExpr   go to state 35
    PrimaryExp  go to state 36
    Lval        go to state 42


State 76

   79 AddExpr: AddExpr "-" • MulExpr

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    MulExpr     go to state 116
    UnaryExpr   go to state 35
    PrimaryExp  go to state 36
    Lval        go to state 42


State 77

   82 MulExpr: MulExpr "/" • UnaryExpr

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    UnaryExpr   go to state 117
    PrimaryExp  go to state 36
    Lval        go to state 42


State 78

   81 MulExpr: MulExpr "*" • UnaryExpr

    DIGIT_INT    shift, and go to state 1
    DIGIT_ID     shift, and go to state 2
    DIGIT_FLOAT  shift, and go to state 3
    "+"          shift, and go to state 4
    "-"          shift, and go to state 5
    "!"          shift, and go to state 16
    "("          shift, and go to state 18

    UnaryExpr   go to state 118
    PrimaryExp  go to state 36
    Lval        go to state 42


State 79

   83 MulExpr: MulExpr "%" • UnaryExpr
